--- a/package.json
+++ b/package.json
@@ -31,19 +31,22 @@
     "@types/loader-utils": "^1.1.3",
     "@types/node": "^11.13.11",
     "jest": "^24.8.0",
-    "loader-utils": "^1.2.3",
     "memory-fs": "^0.4.1",
     "null-loader": "^2.0.0",
+    "rimraf": "^2.6.3",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0"
+  },
+  "dependencies": {
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
-    "rimraf": "^2.6.3",
-    "schema-utils": "^1.0.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.1",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.5",
     "vue-template-compiler": "^2.6.10",
     "vue-template-loader": "^1.0.0",
+    "loader-utils": "^1.2.3",
+    "schema-utils": "^1.0.0"
+  },
+  "peerDependencies": {
+    "typescript": "^3.4.5",
     "webpack": "^4.32.0"
   },
   "jest": {
