--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
     "null-loader": "^2.0.0",
     "rimraf": "^2.6.3",
     "ts-jest": "^24.0.2",
-    "ts-node": "^8.1.0"
-  },
-  "dependencies": {
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5",
+    "webpack": "^4.32.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "vue-template-compiler": "^2.6.10",
-    "vue-template-loader": "^1.0.0",
+    "vue-template-loader": "^1.0.0"
+  },
+  "dependencies": {
     "loader-utils": "^1.2.3",
     "schema-utils": "^1.0.0"
   },
